styles.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Roboto, sans-serif;
  font-size: 18px;
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
}

.header {
  color: #E5E7EB;
  background-color: #1F2937;
  display: flex;
  justify-content: space-between;
  padding: 16px;
  align-items: center;
}

.logo {
  color: #F9FAF8;
  font-size: 24px;
  font-weight: 900;
}

a {
  text-decoration: none;
  color: #E5E7EB;
}

ul {
  list-style: none;
  display: flex;
  gap: 16px;
}

.container1 {
  color: #F9FAF8;
  background-color: #1F2937;
  display: flex;
  padding: 36px;
  gap: 2em;
  justify-content: space-around;
  align-items: flex-end;
}

.main-content {
  width:400px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.main-content-header {
  font-size: 48px;
  font-weight: 900;
}

button {
  border: none;
  border-radius: 8px;
  color: #F9FAF8;
  background-color: #3882F6;
  padding: 8px 24px;
  
}

.container1 img {
height: 200px
}

.container2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 24px;
  gap: 16px;
}

.info-header {
font-size: 24px;
font-weight: 900;
}

.image-container img {
 border: 2px solid #3882F6;
 border-radius: 8px;
}

.image-container img {
  height: 100px;
}

.sub-text-container {
  display: flex;
}

.sub-text {
  width: 150px
}

.container3 {
  background-color: #E5E7EB;
  padding: 48px;
  display: flex;
  flex-direction: column;

}

.quote {
  font-size: 36px;
  color: #1F2937;
  font-weight: 300;
}

.author {
  display: flex;
  justify-content: flex-end;
}

.container4 {
  padding: 48px;
}

.sub-container4 {
  display: flex;
  background-color: #3882F6;
  justify-content: space-between;
  align-items: flex-end;
  padding: 36px;
  border-radius: 8px;
}

.action-container {
  display: flex;
  flex-direction: column;
  color:#F9FAF8;
}

.sub-container4 button {
  border-color: #E5E7EB;
  border-style:solid;
}

.action {
  color: #F9FAF8;
  font-weight: 900;
  font-size: 24px;
}

.call-text {
  color: #E5E7EB;
}

.footer {
  background-color: #1F2937;
  display: flex;
  justify-content: center;
  padding: 16px;
  font: 24px;
  color: #f9FAF8;
  margin-top: auto;
  
}

